--scroll bar added to grid

--- a/EntryNow.Web/wwwroot/index.html
+++ b/EntryNow.Web/wwwroot/index.html
@@ -10,6 +10,20 @@
 
     <!-- custom css -->
     <link href="css/app.css" rel="stylesheet" />
+
+    <!--entries grid scroll-->
+    <style>
+        .my-custom-scrollbar {
+            position: relative;
+            width: 100%;
+            height: 450px;
+            overflow: auto;
+        }
+        .table-wrapper-scroll-y {
+            display: block;
+        }
+    </style>
+
 </head>
 <body>
     <app>Loading...</app>
