--- a/EntryNow.WebApp/wwwroot/index.html
+++ b/EntryNow.WebApp/wwwroot/index.html
@@ -47,7 +47,7 @@
     </style>
 
 </head>
-<body class="hold-transition layout-fixed">
+<body class="hold-transition sidebar-mini layout-fixed">
     <app>Loading...</app>
 
     <!--<div id="blazor-error-ui">
