--- a/EntryNow.WebApp/wwwroot/index.html
+++ b/EntryNow.WebApp/wwwroot/index.html
@@ -19,7 +19,12 @@
     <link rel="stylesheet" href="Admin_LTE/plugins/summernote/summernote-bs4.min.css">
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
-    <app>Loading...</app>
+    <app>
+        <!--Loading...-->
+        <div class="align-center">
+            <span class="spinner-border spinner-border-lg align-center"></span>
+        </div>
+    </app>
 
     <script src="_framework/blazor.webassembly.js"></script>
 
