--- a/EntryNow.WebApp/wwwroot/index.html
+++ b/EntryNow.WebApp/wwwroot/index.html
@@ -17,12 +17,21 @@
     <link rel="stylesheet" href="Admin_LTE/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
     <link rel="stylesheet" href="Admin_LTE/plugins/daterangepicker/daterangepicker.css">
     <link rel="stylesheet" href="Admin_LTE/plugins/summernote/summernote-bs4.min.css">
+
+    <style>
+        .centeredLoader {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 500px;
+        }
+    </style>
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
     <app>
         <!--Loading...-->
-        <div class="align-center">
-            <span class="spinner-border spinner-border-lg align-center"></span>
+        <<div class="centeredLoader">
+            <span class="spinner-border"></span>
         </div>
     </app>
 
