--- a/EntryNow.WebApp/wwwroot/index.html
+++ b/EntryNow.WebApp/wwwroot/index.html
@@ -30,7 +30,7 @@
 <body class="hold-transition sidebar-mini layout-fixed">
     <app>
         <!--Loading...-->
-        <<div class="centeredLoader">
+        <div class="centeredLoader">
             <span class="spinner-border"></span>
         </div>
     </app>
